# ergo-playgrounds

./: .gitignore  CLAUDE.md  dex-playground-diagram.md  ergo-diagram-generator.md  ergo-mermaid-templates.md  simple-send-diagram.html  token-sales-service-diagram.md
.github/workflows/: ci.yml  claude-code-review.yml
ergoscript-analyzer/: Cargo.toml  PROJECT_SUMMARY.md  README.md
ergoscript-analyzer/benches/: parser_benchmark.rs
ergoscript-analyzer/examples/: analyze_example.rs
ergoscript-analyzer/src/: analyzer.rs  ast.rs  diagram.rs  lexer.rs  lib.rs  main.rs  parser.rs
ergoscript-analyzer/tests/: integration_tests.rs
frontend/: debug-test.js  full-test.js  package-lock.json  package.json  playwright.config.ts  test-framework.js  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/__tests__/: errorHandling.integration.test.tsx
frontend/src/components/: CodeEditor.css  CodeEditor.tsx  ContractParameters.css  ContractParameters.tsx  ContractTester.css  ContractTester.tsx  ContractTester.tsx.backup  ExamplesList.css  ExamplesList.tsx  SimulationResults.css  SimulationResults.tsx  WelcomePage.css  WelcomePage.tsx
frontend/src/data/: componentTemplates.ts  educationalContent.ts
frontend/src/hooks/: useContractDesigner.ts  useOptimizedState.ts  usePerformanceOptimizations.ts  usePlaygroundIntegration.ts  useResponsiveLayout.ts
frontend/src/styles/: performance-optimizations.css
frontend/src/test/: global-setup.ts  global-teardown.ts  setup.ts
(+103 files in other folders)
